--- a/ExeBox.Wpf/MainWindow.xaml
+++ b/ExeBox.Wpf/MainWindow.xaml
@@ -41,8 +41,8 @@
                             Width="Auto"  MinWidth="45"/>
                     </Grid.ColumnDefinitions>
                         <Image
-                            Height="15"
-                            Width="15"
+                            Height="16"
+                            Width="16"
                             Style="{StaticResource log_task_status_image_style}"
                             Margin="4,0" />
                     <TextBlock
@@ -114,9 +114,17 @@
                     Icon="{StaticResource menu_item_image_stop }"
                     Command="{x:Static cmd:ExeboxCommands.StopAllTasks}" />
                 <MenuItem
+                    Header="强制结束所有任务"
+                    Icon="{StaticResource menu_item_image_stop }"
+                    Command="{x:Static cmd:ExeboxCommands.EndAllTasks}" />
+                <MenuItem
                     Header="重启所有任务"
                     Icon="{StaticResource menu_item_image_restart }"
                     Command="{x:Static cmd:ExeboxCommands.RestartAllTasks}" />
+                <MenuItem
+                    Header="强制重启所有任务"
+                    Icon="{StaticResource menu_item_image_restart }"
+                    Command="{x:Static cmd:ExeboxCommands.ForceRestartAllTasks}" />
             </MenuItem>
             <MenuItem
                 Header="帮助"
@@ -161,7 +169,7 @@
                                                     Orientation="Horizontal">
                                                     <Image
                                                         Height="14"
-                                                        Width="16"
+                                                        Width="14"
                                                         Style="{StaticResource tree_view_item_image_style_config}"
                                                         Margin="5,0" />
                                                     <TextBlock>
