--- a/ExeBox.Wpf/MainWindow.xaml
+++ b/ExeBox.Wpf/MainWindow.xaml
@@ -106,6 +106,20 @@
                 Style="{StaticResource menu_item_style_head}"
                 ItemContainerStyle="{StaticResource menu_item_style}">
                 <MenuItem
+                    Header="清理残留进程"
+                    Icon="{StaticResource menu_item_image_clearprocess }"
+                    Command="{x:Static cmd:ExeboxCommands.ClearRemainTasks}">
+                    <MenuItem.ToolTip>
+                        <StackPanel
+                            Orientation="Vertical">
+                            <TextBlock
+                                Text="清理配置文件中的进程" />
+                            <TextBlock
+                                Text="当前运行的任务也会被清除" />
+                        </StackPanel>
+                    </MenuItem.ToolTip>
+                </MenuItem>
+                <MenuItem
                     Header="修改任务选择"
                     Icon="{StaticResource menu_item_image_modify }"
                     Command="{x:Static cmd:ExeboxCommands.ModifySelections}" />
@@ -215,9 +229,18 @@
             </avalon:LayoutRoot>
         </avalon:DockingManager>
         <StatusBar
+            x:Name="statusBar"
             Grid.Row="2"
             Background="{StaticResource visual_studio_background_brush_selected}">
-
+            <StackPanel Orientation="Horizontal">
+                <Image
+                    Height="13"
+                    Source="{StaticResource statusbar_image_tip}" Margin="3,0"/>
+                <TextBlock
+                    Foreground="{StaticResource visual_studio_foreground_brush_selected}"
+                    Text="{Binding Tip}" />
+            </StackPanel>
+            
         </StatusBar>
     </Grid>
 </Window>
