添加字体选择 \n 布局保存待完成

--- a/ExeBox.Wpf/Resources/Styles.xaml
+++ b/ExeBox.Wpf/Resources/Styles.xaml
@@ -500,7 +500,9 @@
                                         Property="Background"
                                         TargetName="border"
                                         Value="{StaticResource visual_studio_background_brush_selected}" />
-                                    
+                                    <Setter
+                                        Property="Foreground"
+                                        Value="{StaticResource visual_studio_foreground_brush_selected}"/>
                                 </Trigger>
                                 
                             </ControlTemplate.Triggers>
