--- a/ExeBox.Wpf/MainWindow.xaml
+++ b/ExeBox.Wpf/MainWindow.xaml
@@ -26,7 +26,7 @@
             <DataTemplate
                 x:Key="log_config_item_data_template">
                 <Grid
-                    MinWidth="230"
+                    MinWidth="320"
                     Background="Transparent">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition
@@ -38,8 +38,12 @@
                             MinWidth="45" />
                         <ColumnDefinition
                             Width="Auto"  MinWidth="45"/>
+                        <ColumnDefinition
+                            Width="Auto"  MinWidth="25"/>
+                        <ColumnDefinition
+                            Width="Auto"  MinWidth="40"/>
                     </Grid.ColumnDefinitions>
-                        <Image
+                    <Image
                             Height="16"
                             Width="16"
                             Style="{StaticResource log_task_status_image_style}"
@@ -77,6 +81,22 @@
                             Text="{Binding MessageCount}" />
                     </StackPanel>
 
+                    <TextBlock
+                        Margin="4,0,0,0"
+                            Grid.Column="4"
+                            MinWidth="25"
+                            IsHitTestVisible="False"
+                            VerticalAlignment="Center"
+                            Text="PID: " />
+                    <TextBox
+                        BorderThickness="0"
+                        IsReadOnly="True"
+                        Grid.Column="5"
+                        MinWidth="40"
+                        VerticalAlignment="Center"
+                        TextAlignment="Right"
+                        Text="{Binding ProcessId}" />
+
                     <i:Interaction.Triggers>
                         <i:EventTrigger
                             EventName="MouseDoubleClick">
@@ -110,7 +130,7 @@
                     Command="{x:Static cmd:ExeboxCommands.OpenConfigFile}" 
                     ToolTipService.ShowOnDisabled="True">
                     <MenuItem.ToolTip>
-                        
+
                         <StackPanel
                             Orientation="Vertical">
                             <TextBlock
@@ -163,6 +183,21 @@
                     Command="{x:Static cmd:ExeboxCommands.ForceRestartAllTasks}" />
             </MenuItem>
             <MenuItem
+                Header="界面设置"
+                Margin="5"
+                Height="20"
+                Style="{StaticResource menu_item_style_head}"
+                ItemContainerStyle="{StaticResource menu_item_style}">
+                <MenuItem
+                    Header="字体设置"
+                    Icon="{StaticResource menu_item_image_font }"
+                    Click="FontFamilyChange" />
+                <MenuItem
+                    Header="保存布局"
+                    Icon="{StaticResource menu_item_image_font }"
+                    Click="SaveLayoutConfig" />
+            </MenuItem>
+            <MenuItem
                 Header="帮助"
                 Margin="5"
                 Height="20"
@@ -183,7 +218,7 @@
                     <avalon:LayoutPanel
                         Orientation="Horizontal">
                         <avalon:LayoutAnchorablePaneGroup
-                            DockWidth="280">
+                            DockWidth="350">
                             <avalon:LayoutAnchorablePane>
                                 <avalon:LayoutAnchorable
                                     Title="日志任务浏览器" CanHide="False">
@@ -224,12 +259,8 @@
                                 </avalon:LayoutAnchorable>
                             </avalon:LayoutAnchorablePane>
                         </avalon:LayoutAnchorablePaneGroup>
-                        <avalon:LayoutDocumentPaneGroup>
-                            <avalon:LayoutDocumentPane
-                                x:Name="documentsRoot">
-                                
-
-                            </avalon:LayoutDocumentPane>
+                        <avalon:LayoutDocumentPaneGroup x:Name="documentsRoot">
+                            
                         </avalon:LayoutDocumentPaneGroup>
                     </avalon:LayoutPanel>
                     <avalon:LayoutAnchorablePaneGroup
@@ -260,7 +291,7 @@
                     Foreground="{StaticResource visual_studio_foreground_brush_selected}"
                     Text="{Binding Tip}" />
             </StackPanel>
-            
+
         </StatusBar>
     </Grid>
 </Window>
